thesis: Small fixes

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -642,7 +642,7 @@ By translating the system into a model and the specification into a formal prope
 \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{figures/model-checking.png}
-    \caption{Overview on Model Checking}
+    \caption{Overview of Model Checking}
     \label{fig:model-checking}
 \end{figure}
 
