--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -332,7 +332,7 @@ To summarize:
 \glspl{pma} and \gls{pmp} entries make general properties of physical memory transparent to software allowing it to adopt to possible interactions with respective regions correctly.
 \gls{pmp} entries, however, can also be used for memory protection in addition to virtualization.
 
-An overview on all registers that are involved in trap handling can be found in table \ref{tbl:trap-csrs}.
+An overview of all registers that are involved in trap handling can be found in table \ref{tbl:trap-csrs}.
 Those \glspl{csr} which are available to user-mode would also be available to supervisor-mode in this context.
 Registers written in italic font are not actual registers on their own but provide a restricted view on their respective machine-mode counterpart.
 
